# llm-attractors

./: .gitignore  BLOGPOST.md  Makefile  NORTH_STARS.md  README.md  changelog.md  flywheel.toml  pyproject.toml
.claude/skills/next-experiment/: SKILL.md
.flywheel/: spend.jsonl
.github/workflows/: pages.yml
boom/: dashboard.py  make_attrition.py  make_figure.py  make_model_comparison.py  run.py
experiments/: LOOP_PROTOCOL.md  README.md  build_browse.py  prediction-registry.md  queue.md
experiments/2026-06-26-stimulus-sweep-discovery/: analyze.py  postmortem.md  spec.md  sweep.py
experiments/2026-06-27-attractor-taxonomy-judge/: judge.py  make_figures.py  postmortem.md  spec.md
experiments/2026-06-27-cross-model-basin-consistency/: judge_xm.py  make_figures_xm.py  postmortem.md  spec.md  sweep_xm.py
reports/: attractor-map.md  speak-multimodel.md  speak.md
results/: trajectories.jsonl
results/crossmodel/: basins.jsonl  basins_combined.jsonl  basins_summary.md  lengths.jsonl
results/discovery/: basins.jsonl  basins_summary.md  lengths.jsonl  samples.md  summary.csv
results/speak/: lengths.jsonl
results/speak-deepseek-v3.2/: lengths.jsonl
results/speak-gemini-3.5-flash/: lengths.jsonl
results/speak-gpt-5.5/: lengths.jsonl
results/speak-kimi-k2.6/: lengths.jsonl
results/speak-nemotron-3-super-120b/: lengths.jsonl
